--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@
 html {
   font-size: 100%;
   font-family: 'Raleway', sans-serif;
+  color: #000;
+}
+
+body {
+  background-color: #9AC5F4;
+  background-image: url('weather.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 95vh;
+
 }
 
 #container {
@@ -14,6 +25,50 @@ html {
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
+  background-color: beige;
+  width: 50%;
+  margin: 0 auto;
   margin-top: 3rem;
+  padding: 3rem;
+  gap: 3rem;
+  border-radius: 15px;
+  background-color: rgba(255, 255, 255, 0.2) ;
+  backdrop-filter: blur(15px);
 
 }
+
+#header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#input {
+  width: 70%;
+  font-size: 2.4rem;
+  border-radius: 9px;
+  border: none;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+}
+
+.container-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  font-size: 2rem;
+  font-weight: 700;
+
+}
+
+#city{
+  font-weight: 900;
+  font-size: 2.8rem;
+}
+
+#temperature {
+  font-weight: 900;
+  font-size: 3.8rem;
+} 
