--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  min-height: 95vh;
+  min-height: 100vh;
 
 }
 
@@ -29,12 +29,12 @@ body {
   width: 50%;
   margin: 0 auto;
   margin-top: 3.6rem;
+  margin-bottom: 3rem;
   padding: 3rem;
   gap: 3rem;
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.2) ;
   backdrop-filter: blur(15px);
-
 }
 
 #header {
@@ -65,6 +65,10 @@ body {
 
 }
 
+.container-box:last-child {
+  margin-bottom: 1rem;
+}
+
 #city{
   font-weight: 900;
   font-size: 2.8rem;
@@ -91,4 +95,48 @@ button img {
   width: 2.4rem;
   height: 2.4em;
   background: none;
+}
+
+/* Media Queries */
+
+@media all and (max-width: 82em) {
+  /* body {
+    height: 100%;
+  } */
+  #container {
+    width: 70%;
+  }
+
+  #input {
+    width: 85%;
+  }
+}
+
+@media all and (max-width: 44em) {
+  html {
+    font-size: 75%;
+  }
+
+  #container {
+    margin-top: 9rem;
+  }
+
+  button img {
+    width: 3rem;
+    height: 2em;
+    
+  }
+}
+
+@media all and (max-width: 32em) {
+  html {
+    font-size: 62.5%;
+  } 
+
+  #container {
+    background: none;
+    backdrop-filter: blur(5px);
+    width: 90%;
+    /* height: 80vh; */
+  }
 }
